@@ -403,10 +403,14 @@ channel_join_list(const int list, const int rejoin, connection_type *client)
 	/* Join old_channels if client was defined. */
 	if (client != NULL) {
 		LLIST_WALK_H(old_channels.head, channel_type *);
-			irc_write(client, ":%s!%s JOIN :%s",
-					status.nickname,
-					status.idhostname,
-					data->name);
+			if (data->hasqlog) {
+				irc_write(client, ":%s!%s JOIN :%s",
+						status.nickname,
+						status.idhostname,
+						data->name);
+			} else {
+				channel_rem(data, LIST_OLD);
+			}
 		LLIST_WALK_F;
 	}
 
